Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/master_hyperblogplatzy.yml
+++ b/.github/workflows/master_hyperblogplatzy.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
-          node-version: '12.13.0'
+          node-version: '~12'
 
       - name: npm install, build, and test
         run: |
@@ -52,5 +52,5 @@ jobs:
         with:
           app-name: 'hyperblogplatzy'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_DB006FB9DF344F31B0D42D4754D32400 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_DF90A3A02A2C4137B983071ADADD3EAC }}
           package: .
